dded translations up to 100th char

--- a/www/index.html
+++ b/www/index.html
@@ -108,7 +108,7 @@ by www.giammy.com/hsk
         <!--<div class="left"><ons-back-button>Back</ons-back-button></div> -->
         <div class="center">Details</div>
         <div class="left">
-	    <ons-button style="margin: 2px;"; ng-click="backReset()">Back</ons-button>
+	    <ons-button modifier="outline";  style="margin: 2px;"; ng-click="backReset()">Back</ons-button>
         </div>
       </ons-toolbar>
 
